--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,14 +11,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tc</td>
+<td>tc2</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>tc1</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>tc3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>configBC</td>
+<td>launchBrowser</td>
 <td>regression smoketest </td>
 </tr>
 <tr>
