--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c88a92">  <td>24/01/03 02:26:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.CloseBrowser()[pri:0, instance:com.test.Tc@78691363]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="dced80">  <td>24/01/03 02:26:39</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tc.tc()[pri:0, instance:com.test.Tc@78691363]">tc</td> 
-  <td>main@16503286</td>   <td></td> </tr>
-<tr bgcolor="c88a92">  <td>24/01/03 02:26:39</td>   <td>71</td> <td title="&lt;&lt;BaseClass.closeDB()[pri:0, instance:com.test.Tc@78691363]">&lt;&lt;closeDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16503286</td>   <td></td> </tr>
-<tr bgcolor="c88a92">  <td>24/01/03 02:26:39</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApp()[pri:0, instance:com.test.Tc@78691363]">&gt;&gt;loginToApp</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="c88a92">  <td>24/01/03 02:26:38</td>   <td>-63</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC(java.lang.String)[pri:0, instance:com.test.Tc@78691363]">&gt;&gt;configBC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16503286</td>   <td></td> </tr>
-<tr bgcolor="c88a92">  <td>24/01/03 02:26:39</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutofApp()[pri:0, instance:com.test.Tc@78691363]">&lt;&lt;logoutofApp</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="c88a92">  <td>24/01/03 02:26:38</td>   <td>-86</td> <td title="&gt;&gt;BaseClass.connectDB()[pri:0, instance:com.test.Tc@78691363]">&gt;&gt;connectDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16503286</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>24/01/03 17:49:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutofApp()[pri:0, instance:com.test.Tc@14cd1699]">&lt;&lt;logoutofApp</td> 
+<td>&nbsp;</td>  <td>main@361398902</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>24/01/03 17:49:39</td>   <td>-20030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApp()[pri:0, instance:com.test.Tc@14cd1699]">&gt;&gt;loginToApp</td> 
+<td>&nbsp;</td>  <td>main@361398902</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>24/01/03 17:49:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutofApp()[pri:0, instance:com.test.Tc@14cd1699]">&lt;&lt;logoutofApp</td> 
+<td>&nbsp;</td>  <td>main@361398902</td>   <td></td> </tr>
+<tr bgcolor="e177e3">  <td>24/01/03 17:49:37</td>   <td>-22617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tc.tc2()[pri:1, instance:com.test.Tc@14cd1699]">tc2</td> 
+  <td>main@361398902</td>   <td></td> </tr>
+<tr bgcolor="e177e3">  <td>24/01/03 17:49:39</td>   <td>-20030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tc.tc3()[pri:2, instance:com.test.Tc@14cd1699]">tc3</td> 
+  <td>main@361398902</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>24/01/03 17:49:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutofApp()[pri:0, instance:com.test.Tc@14cd1699]">&lt;&lt;logoutofApp</td> 
+<td>&nbsp;</td>  <td>main@361398902</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>24/01/03 17:49:39</td>   <td>-20030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApp()[pri:0, instance:com.test.Tc@14cd1699]">&gt;&gt;loginToApp</td> 
+<td>&nbsp;</td>  <td>main@361398902</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>24/01/03 17:49:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.CloseBrowser()[pri:0, instance:com.test.Tc@14cd1699]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@361398902</td>   <td></td> </tr>
+<tr bgcolor="e177e3">  <td>24/01/03 17:49:35</td>   <td>-24323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tc.tc1()[pri:0, instance:com.test.Tc@14cd1699]">tc1</td> 
+  <td>main@361398902</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>24/01/03 17:49:39</td>   <td>-20030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApp()[pri:0, instance:com.test.Tc@14cd1699]">&gt;&gt;loginToApp</td> 
+<td>&nbsp;</td>  <td>main@361398902</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>24/01/03 17:49:31</td>   <td>-27994</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser()[pri:0, instance:com.test.Tc@14cd1699]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@361398902</td>   <td></td> </tr>
 </table>
